--- a/requirements.txt
+++ b/requirements.txt
@@ -1,41 +1,100 @@
 alabaster==0.7.12
+anyio==3.6.1
 appdirs==1.4.4
+appnope==0.1.3
+argon2-cffi==21.3.0
+argon2-cffi-bindings==21.2.0
 astroid==2.5.6
+asttokens==2.0.5
+attrs==21.4.0
 Babel==2.9.1
+backcall==0.2.0
+beautifulsoup4==4.11.1
 black==21.5b0
+bleach==5.0.1
 certifi==2020.12.5
+cffi==1.15.1
 chardet==4.0.0
 click==7.1.2
 colorama==0.4.4
+debugpy==1.6.2
+decorator==5.1.1
+defusedxml==0.7.1
 docopt==0.6.2
 docutils==0.16
+entrypoints==0.4
+executing==0.8.3
 Faker==8.1.3
+fastjsonschema==2.15.3
 greenlet==1.0.0
 idna==2.10
 imagesize==1.2.0
+importlib-metadata==4.12.0
+importlib-resources==5.8.0
+ipykernel==6.15.1
+ipython==8.4.0
+ipython-genutils==0.2.0
 isort==5.8.0
-Jinja2==2.11.3
+jedi==0.18.1
+Jinja2==3.1.2
+json5==0.9.8
+jsonschema==4.7.1
+jupyter-client==7.3.4
+jupyter-core==4.11.1
+jupyter-server==1.18.1
+jupyterlab==3.4.3
+jupyterlab-pygments==0.2.2
+jupyterlab-server==2.15.0
 lazy-object-proxy==1.6.0
-MarkupSafe==1.1.1
+MarkupSafe==2.1.1
+matplotlib-inline==0.1.3
 mccabe==0.6.1
+mistune==0.8.4
 mypy-extensions==0.4.3
+nbclassic==0.4.2
+nbclient==0.6.6
+nbconvert==6.5.0
+nbformat==5.4.0
+nest-asyncio==1.5.5
+notebook==6.4.12
+notebook-shim==0.1.0
 num2words==0.5.10
+numpy==1.23.1
 packaging==20.9
+pandas==1.4.3
+pandocfilters==1.5.0
+parso==0.8.3
 pathspec==0.8.1
-Pillow==8.2.0
+pexpect==4.8.0
+pickleshare==0.7.5
+Pillow==9.2.0
+prometheus-client==0.14.1
+prompt-toolkit==3.0.30
+psutil==5.9.1
+ptyprocess==0.7.0
+pure-eval==0.2.2
+pycparser==2.21
 Pygments==2.9.0
 pylint==2.8.2
 pyparsing==2.4.7
-PySide2==5.15.2
-python-dateutil==2.8.1
+pyrsistent==0.18.1
+PySide6==6.3.1
+PySide6-Addons==6.3.1
+PySide6-Essentials==6.3.1
+python-dateutil==2.8.2
+python-dotenv==0.20.0
 pytz==2021.1
 PyYAML==5.4.1
+pyzmq==23.2.0
 regex==2021.4.4
 reportlab==3.5.67
 requests==2.25.1
-shiboken2==5.15.2
+Send2Trash==1.8.0
+shiboken6==6.3.1
 six==1.16.0
+sniffio==1.2.0
 snowballstemmer==2.1.0
+soupsieve==2.3.2.post1
 Sphinx==3.5.4
 sphinxcontrib-applehelp==1.0.2
 sphinxcontrib-devhelp==1.0.2
@@ -45,7 +104,16 @@ sphinxcontrib-plantuml==0.20.1
 sphinxcontrib-qthelp==1.0.3
 sphinxcontrib-serializinghtml==1.1.4
 SQLAlchemy==1.4.11
+stack-data==0.3.0
+terminado==0.15.0
 text-unidecode==1.3
+tinycss2==1.1.1
 toml==0.10.2
+tornado==6.2
+traitlets==5.3.0
 urllib3==1.26.4
+wcwidth==0.2.5
+webencodings==0.5.1
+websocket-client==1.3.3
 wrapt==1.12.1
+zipp==3.8.0
